sfdx-source/apex-extensions/main/triggerHandler/objects/fflib_TriggerAction__mdt/fflib_TriggerAction__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Action</label>
    <pluralLabel>Trigger Actions</pluralLabel>
</CustomObject>