sfdx-source/apex-extensions/main/triggerHandler/objects/fflib_TriggerAction__mdt/fields/ExecutionContext__c.field-meta.xml
<CustomField>
    <fullName>ExecutionContext__c</fullName>
    <label>Execution Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Realtime</fullName>
                <default>true</default>
                <label>Realtime</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Dedicated Queued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>