sfdx-source/apex-extensions/main/triggerHandler/objects/fflib_TriggerAction__mdt/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>Object Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>TriggerActions</relationshipLabel>
    <relationshipName>TriggerActions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>