sfdx-source/apex-extensions/main/triggerHandler/objects/fflib_TriggerAction__mdt/fields/ObjectTypeAlternate__c.field-meta.xml
<CustomField>
    <fullName>ObjectTypeAlternate__c</fullName>
    <description>Use this field to specify the SObject API name to bind to when the &quot;Object Type&quot; field does not list that particular SObject.  Only specify the &quot;Object Type&quot; field or this one; not both.</description>
    <inlineHelpText>Use this field to specify the SObject API name to bind to when the &quot;Object Type&quot; field does not list that particular SObject.  Only specify the &quot;Object Type&quot; field or this one; not both.</inlineHelpText>
    <label>ObjectType Alternate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>