sfdx-source/apex-extensions/main/triggerHandler/objects/fflib_TriggerAction__mdt/fields/Stateful__c.field-meta.xml
<CustomField>
    <fullName>Stateful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stateful</label>
    <type>Checkbox</type>
</CustomField>